complate leader board
